syntax = "proto3";

package poverty.api.poverty.resource.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "poverty.api.poverty.resource.v1";
option java_outer_classname = "ResourceV1";

import "validate/validate.proto";

message GetResourceRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message GetResourceReply {
  uint32 id = 1;
  string title = 2;
  string src = 3;
  optional bool status = 4;
  uint32 createdAt = 5;
  uint32 updatedAt = 6;
}

message ListResourceRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at","updated_at"]}];
  optional string title = 5[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional bool status = 6;
}

message ListResourceReply {
  message Resource {
    uint32 id = 1;
    string title = 2;
    string src = 3;
    string name = 4;
    string type = 5;
    string url = 6;
    uint32 size = 7;
    optional bool status = 8;
    uint32 createdAt = 9;
    uint32 updatedAt = 10;
  }
  uint32 total = 1;
  repeated Resource list = 2;
}

message CreateResourceRequest {
  string title = 1[(validate.rules).string = {min_len: 1,max_len: 40}];
  string src = 2[(validate.rules).string = {min_len: 1}];
  optional bool status = 3;
}

message CreateResourceReply {
  uint32 id = 1;
}

message UpdateResourceRequest {
  uint32 id = 1;
  optional string title = 2[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional string src = 3[(validate.rules).string = {min_len: 1}];
  optional bool status = 4;
}

message UpdateResourceReply {
}

message DeleteResourceRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteResourceReply {
}

